CVS-20090616
+ new build target FORCES - prints out every force calculated, so be very careful about
  logging, only recommended for runs without optimization
  (FORCES is only active in combination with DEBUG)
+ [APOT] added new potential and some tweaks for optimizaion
+ added some units to the rms error
+ potfit no longer reads and prints configuration names
+ new script available: list_config.sh - reads vasp2force comments from force files
  and displays them with the corresponding potential number
+ potfit now reports any punishments in the error report, if there are any
+ new terminating criterion for simann: now depending on the relative change of F and Fopt

CVS-20090603
+ [APOT] added function to check parameters for some additional constraints
+ [APOT] moved punishment to extra function and add eopp punishment
+ [APOT] initialize splines for eam correctly

CVS-20090515
+ added support for cells smaller than cutoff radius
+ added support for chemical species via #C in config and potential files
+ [APOT] smooth_cutoff is now using a cubic polynomial instead of a parabola
  that makes it a lot more stable regarding the cutoff radius

CVS-20090513
+ [MPI] fixed a bug that ended in an endless loop if an error was
  encountered before the first broadcast
+ the radial distribution output now states how many functions it contains
+ [APOT] the plotapot script now reads how many rad. dist. there are
+ [APOT] fixed a bug with potentials not using _sc
+ replaced end{force,energy,stress} by output_prefix
  the files "output_prefix".{force,energy,stress,rho_loc,punish} will be written if present
  else the output will be redirected to stdout
+ the force file now shows the atomtype

CVS-20090421
+ [APOT] fixed parameters (pmin==pmax) are now really fixed
+ [APOT] lots of eam bugs fixed

CVS-20090414
+ [APOT] first (working) EAM implementation - needs lots of testing
+ [APOT] don't use rcut
+ [APOT] always enable -DNORESCALE (only important for EAM)

CVS-20090408